--- a/Курс 3/VPHAMI/Lab 1/CalcFigure/CMakeLists.txt
+++ b/Курс 3/VPHAMI/Lab 1/CalcFigure/CMakeLists.txt
@@ -23,6 +23,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(CalcFigure
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        figurearea.h figurearea.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET CalcFigure APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
