--- a/Курс 3/VPHAMI/Lab 1/CalcFigure/CMakeLists.txt
+++ b/Курс 3/VPHAMI/Lab 1/CalcFigure/CMakeLists.txt
@@ -24,6 +24,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         figurearea.h figurearea.cpp
+        Resourse.qrc
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET CalcFigure APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
