--- a/Курс 3/OS/Lab_8/Makefile
+++ b/Курс 3/OS/Lab_8/Makefile
@@ -1,4 +1,4 @@
 run: 
-	g++ -O0 -o sequental.out sequental.cpp && ./sequental
-	g++ -O0 -o pthreads.out pthreads.cpp && ./pthreads
-	g++ -O0 -o threads.out threads.cpp && ./threads
+	g++ -O0 -o sequental.out sequental.cpp && ./sequental.out
+	g++ -O0 -o pthreads.out pthreads.cpp && ./pthreads.out
+	g++ -O0 -o threads.out threads.cpp && ./threads.out
