Check work Pcap++

--- a/Курс 3/OS/Coursework/CMakeLists.txt
+++ b/Курс 3/OS/Coursework/CMakeLists.txt
@@ -8,9 +8,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
+find_package(PcapPlusPlus REQUIRED)
+
 include_directories(${INCLUDE_DIR})
 
 file(GLOB_RECURSE SOURCES "${SOURCE_DIR}/*.cpp")
 file(GLOB_RECURSE HEADERS "${INCLUDE_DIR}/*.h")
 
 add_executable(OS_Coursework ${SOURCES})
+
+set_target_properties("${PROJECT_NAME}" PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
+target_link_libraries("${PROJECT_NAME}" PUBLIC PcapPlusPlus::Pcap++)
