--- a/Курс 3/AVS/RGZ/prometheus/prometheus.yml
+++ b/Курс 3/AVS/RGZ/prometheus/prometheus.yml
@@ -1,22 +1,22 @@
 global:
-  scrape_interval: 10s
+  scrape_interval: 10s
 
 rule_files:
-  - "alert.rules"
+  - "alert.rules"
 
 scrape_configs:
-  - job_name: 'prometheus'
-    scrape_interval: 10s
-    static_configs:
-      - targets: ['prometheus:9090']
+  - job_name: 'prometheus'
+    scrape_interval: 10s
+    static_configs:
+      - targets: ['prometheus:9090']
 
-  - job_name: 'node'
-    scrape_interval: 10s
-    static_configs:
-      - targets: ['node-exporter:9100']
+  - job_name: 'node'
+    scrape_interval: 10s
+    static_configs:
+      - targets: ['node-exporter:9100']
 
 alerting:
-  alertmanagers:
-    - static_configs:
-        - targets:
-            - 'alertmanager:9093'
+  alertmanagers:
+    - static_configs:
+        - targets: ['alertmanager:9093']
+
