SSW Homework_7 update

--- a/Курс 3/Семестр 2/SSW/Homework_7/src/main/resources/application.properties
+++ b/Курс 3/Семестр 2/SSW/Homework_7/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8081
+server.port=8080
 spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/Order
+spring.datasource.url=jdbc:postgresql://localhost:5432/homework_7
 spring.datasource.username=postgres
-spring.datasource.password=4741
+spring.datasource.password=1234
 
 # Liquibase configuration
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
